[package]
name = "ghoti-rust"
version = "0.1.0"
edition = "2021"
rust-version = "1.67"

[dependencies]
widestring-suffix = { path = "./widestring-suffix/" }
pcre2 = { git = "https://github.com/ghoti-shell/rust-pcre2", branch = "master", default-features = false, features = ["utf32"] }
fast-float = { git = "https://github.com/ghoti-shell/fast-float-rust", branch="ghoti" }
printf-compat = { git = "https://github.com/ghoti-shell/printf-compat.git", branch="ghoti" }

autocxx = "0.23.1"
bitflags = "1.3.2"
cxx = "1.0"
errno = "0.2.8"
inventory = { version = "0.3.3", optional = true}
libc = "0.2.137"
lru = "0.10.0"
nix = { version = "0.25.0", default-features = false, features = [] }
num-traits = "0.2.15"
once_cell = "1.17.0"
rand = { version = "0.8.5", features = ["small_rng"] }
unixstring = "0.2.7"
widestring = "1.0.2"

[build-dependencies]
autocxx-build = "0.23.1"
cxx-build = { git = "https://github.com/ghoti-shell/cxx", branch = "ghoti" }
cxx-gen = { git = "https://github.com/ghoti-shell/cxx", branch = "ghoti" }
miette = { version = "5", features = ["fancy"] }

[lib]
crate-type = ["staticlib"]

[features]
# The ghoti-ffi-tests feature causes tests to be built which need to use the FFI.
# These tests are run by ghoti_tests().
default = ["ghoti-ffi-tests"]
ghoti-ffi-tests = ["inventory"]

# The following features are auto-detected by the build-script and should not be enabled manually.
bsd = []

[patch.crates-io]
cc = { git = "https://github.com/mqudsi/cc-rs", branch = "ghoti" }
cxx = { git = "https://github.com/ghoti-shell/cxx", branch = "ghoti" }
cxx-gen = { git = "https://github.com/ghoti-shell/cxx", branch = "ghoti" }
autocxx = { git = "https://github.com/ghoti-shell/autocxx", branch = "ghoti" }
autocxx-build = { git = "https://github.com/ghoti-shell/autocxx", branch = "ghoti" }
autocxx-bindgen = { git = "https://github.com/ghoti-shell/autocxx-bindgen", branch = "ghoti" }

[patch.'https://github.com/ghoti-shell/cxx']
cc = { git = "https://github.com/mqudsi/cc-rs", branch = "ghoti" }

[patch.'https://github.com/ghoti-shell/autocxx']
cc = { git = "https://github.com/mqudsi/cc-rs", branch = "ghoti" }

#cxx = { path = "../../cxx" }
#cxx-gen = { path="../../cxx/gen/lib" }
#autocxx = { path = "../../autocxx" }
#autocxx-build = { path = "../../autocxx/gen/build" }
#autocxx-bindgen = { path = "../../autocxx-bindgen" }

[profile.release]
overflow-checks = true
