[package]
name = "fish-gettext-extraction"
edition.workspace = true
rust-version.workspace = true
version = "0.0.1"
repository = "https://github.com/fish-shell/fish-shell"
description = "proc-macro for extracting strings for gettext translation"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.95"

[lints]
workspace = true
